--- a/CaitlynCode/style.css
+++ b/CaitlynCode/style.css
@@ -16,24 +16,36 @@ body {
 	padding:0;
 	border:0;
 }
+
 p.a {
   font-family: "CustomFont", cursive;
-   font-size: 40px; 
+   font-size: 40px;
+   padding-top:30px;
+   padding-left:38px;
+   text-align:center;
+   margin:0;
   
 }
+
 p.b{
   font-family: "CustomFont2", cursive;
    font-size: 40x; 
-  
+   margin:0;
+   text-align: center;
+   padding-top: 120px;
 }
 
 .pink {
 	height: 100%;
 	width: 10%;
-	background-color: #FFD3A8;
-	
+	background-color: #ffffff;
 }
 
+.pink2{
+	height: 100%;
+	width: 5%;
+	background-color: #ffffff;
+}
 
 .blue {
 	display:flex;
@@ -69,8 +81,8 @@ p.b{
 	display:flex;
 	flex-wrap: wrap;
 	height: 100%;
-	width: calc(100%/2);
-	background-color:#f9fcfc;
+	width: 100%;
+	background-color: #C1E2CD;
 }
 
 .green {
@@ -84,7 +96,7 @@ p.b{
 	display: flex;
 	height: 100%;
 	width: 80%;
-	background-color:#82FF64;
+	background-color: white;
 } 
 
 .yellow {
@@ -98,7 +110,7 @@ p.b{
 	display: flex;
 	height: 45%;
 	width: 100%;
-	background-color:#D1F9F5;
+	background-color: white;
 }
 
 .orange {
@@ -109,6 +121,13 @@ p.b{
 }
 
 .red {
+	display: flex;
+	height: 100%;
+	width: calc(100%/4);
+	background-color:#C1E2CD;
+}
+
+.red2{
 	display: flex;
 	height: 100%;
 	width: 20%;
@@ -124,8 +143,8 @@ p.b{
 
 .arrow{
 	display:flex;
-
 }
+
 .center {
   display: block;
   margin-left: auto;
@@ -133,4 +152,38 @@ p.b{
   width: 70%;
   height:70%;
   padding-top: 50px;
+}
+
+.black{
+	display:flex;
+	height: 100%;
+	width: 10%;
+	background-color:#C1E2CD;
+}
+
+.black2{
+	display:block;
+	height: 100%;
+	width: 80%;
+	background-color:#ffffff;
+}
+
+.black3{
+	display:flex;
+	height: 100%;
+	background-color:#C1E2CD;
+}
+
+.green3{
+	display:block;
+	height: 10%;
+	width: 100%;
+	background-color:#C1E2CD;
+}
+
+.green4{
+	display:block;
+	height: 80%;
+	width: 100%;
+	background-color:#ffffff;
 }
