--- a/CaitlynCode/style.css
+++ b/CaitlynCode/style.css
@@ -32,7 +32,7 @@ p.b{
    font-size: 40x; 
    margin:0;
    text-align: center;
-   padding-top: 120px;
+   padding-bottom: 120px;
 }
 
 .pink {
@@ -66,7 +66,7 @@ p.b{
 	display:flex;
 	height: 100%;
 	width: 80%;
-	background-color: #f9fcfc;
+	background-color:#F8F8F8;
 }
 
 
@@ -184,6 +184,18 @@ p.b{
 .green4{
 	display:block;
 	height: 80%;
+	width: 100%;
+	background-color:#ffffff;
+}
+.clear{
+	display:block;
+	height: 20%;
+	width: 100%;
+	background-color:#ffffff;
+}
+.clear2{
+	display:block;
+	height: 50%;
 	width: 100%;
 	background-color:#ffffff;
 }
