--- a/quizpage/style2.css
+++ b/quizpage/style2.css
@@ -163,7 +163,8 @@ p.b {
 	display: block;
 	height: 20%;
 	width: 100%;
-	padding-top: 80px;
+	padding-top: 30px;
+	padding-bottom: 40px;
 	background-color:#FFFFFF;
 }
 
