--- a/aboutuspage/style3.css
+++ b/aboutuspage/style3.css
@@ -21,8 +21,8 @@ width: 100vw;
 }
 
 p.a {
-  font-family: "CustomFont2", cursive;
-   font-size: 20px;
+  font-family: "CustomFont", cursive;
+   font-size: 13px;
    text-align: center;
    padding-bottom: 2px;
    margin: 0;
